# financial_tool_starter

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.db  docker-compose.yml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 21ac6f1b7ffb_add_auth.py  97dc65871249_fresh_init.py  a01fd80fff1f_compliance_blocks.py  a972e7d9c5db_compliance_schema.py  c22588e89462_init_schema.py  c815a447aeca_add_firm_pan.py
app/: main.py
app/api/: accounts.py  auth.py  companies.py  compliance.py  report_config.py  settings.py  signatories.py  templates.py  works.py
app/core/: config.py  dependencies.py  security.py
app/models/: domain.py
app/schemas/: account_schemas.py  company_schemas.py  report_schemas.py  signatory_schemas.py  user_schemas.py  work_schemas.py
app/services/: compliance_service.py  mapping_service.py  report_service.py  statement_generation_service.py  trial_balance_service.py
app/utils/: csv_parser.py  default_compliance_templates.py  validators.py
